--- a/.github/workflows/main_wk12-432.yml
+++ b/.github/workflows/main_wk12-432.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -26,12 +26,15 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,17 +50,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9ABF43AB70BE4CEC868147FA250BDDAF }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_BE9B2B254D7B469AAB9524956C582C14 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B714405B17B34788BA17B9F4146D3A16 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_33C5B0E5E7434599BBCC07D7F7CFAC71 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E3934F79A3DC43A6A761C4EBC4E9EAAC }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B74B7EF15698416D9259250B91AC32CA }}
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
         with:
           app-name: 'wk12-432'
           slot-name: 'Production'
